# nppopenai

.github/workflows/: CI_build.yml
src/utils/: EncodingUtils.cpp
tests/: CMakeLists.txt  test_RequestFormatters.cpp  test_ResponseParsers.cpp  test_StreamParser.cpp  test_framework.h  test_main.cpp
tests/stubs/: commctrl.h  globals_stub.cpp  shlwapi.h  tchar.h  windows.h  windowsx.h
tests/stubs/ui/dialogs/: ChatSettingsDlg.h  DockingDlgInterface.h  LoaderDlg.h  StaticDialog.h  Window.h
